fix trip planner form spacing (#1562)

--- a/apps/site/web/static/css/_trip_plan.scss
+++ b/apps/site/web/static/css/_trip_plan.scss
@@ -17,12 +17,10 @@
 
 .trip-plan-form-container {
   @include media-breakpoint-up(md) {
+    margin-bottom: 0;
+    margin-top: 0;
     position: sticky;
     top: 0;
-  }
-
-  @include media-breakpoint-down(sm) {
-    margin: $space-12 $base-spacing;
   }
 }
 
